# meridian

./: .gitignore  CONCEPTS.md  Makefile  README.md  pyproject.toml
.build_progress/: 00_plan.md
dashboard/: Dockerfile  app.py  pages.py  style.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_surrogate_key.sql
dbt_project/models/marts/: customer_cohorts.sql  daily_revenue.sql  fraud_summary.sql  product_performance.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_clicks.sql  stg_orders.sql  stg_payments.sql  (+1 more)
dbt_project/tests/: assert_no_duplicate_orders.sql  assert_refund_lte_order_amount.sql  assert_revenue_non_negative.sql
duckdb/: query_layer.py
duckdb_layer/: query_layer.py
flink/jobs/: fraud_detector.py  inventory_alerts.py  late_event_handler.py  revenue_aggregator.py
flink/lib/: kafka_utils.py
generator/: models.py  producer.py
iceberg/: catalog.py  sink.py  time_travel.py  writer.py
infra/: docker-compose.yml
kafka/: schema_registry.py
kafka/schemas/: click_event.avsc  inventory_event.avsc  order_event.avsc  payment_event.avsc  return_event.avsc
libs/quarantine_dq/: pyproject.toml
libs/quarantine_dq/quarantine/: __init__.py  context.py  record.py  store.py
libs/quarantine_dq/quarantine/stores/: __init__.py  factory.py
monitoring/: metrics.py  prometheus.yml
quarantine/: replay_job.py  stream_quarantine.py
quarantine_int/: replay_job.py
tests/: benchmark.py  conftest.py  test_avro_schemas.py  test_end_to_end.py  test_generator.py  test_quarantine_integration.py  test_query_layer.py
(+2 files in other folders)
