[project]
name = "meridian"
version = "0.1.0"
description = "Real-time e-commerce analytics: Kafka → Flink → Iceberg → dbt → DuckDB → Streamlit"
requires-python = ">=3.9"
dependencies = [
    "quarantine-dq",
    "apache-flink>=1.18.0",
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "fastavro>=1.9.0",
    "dbt-duckdb>=1.7.0",
    "duckdb>=0.10.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "faker>=22.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prometheus-client>=0.19.0",
    "pyiceberg>=0.6.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meridian"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.uv.sources]
quarantine-dq = { path = "libs/quarantine_dq", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
