[project]
name = "quarantine-dq"
version = "0.1.0"
description = "Dead-letter queue library for catching, storing, and replaying bad streaming events"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quarantine"]
